
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct line_log_data {int ranges; struct line_log_data* next; int path; } ;


 int line_log_data_init (struct line_log_data*) ;
 int range_set_copy (int *,int *) ;
 int range_set_union (int *,int *,int *) ;
 int strcmp (int ,int ) ;
 struct line_log_data* xmalloc (int) ;
 int xstrdup (int ) ;

__attribute__((used)) static struct line_log_data *line_log_data_merge(struct line_log_data *a,
       struct line_log_data *b)
{
 struct line_log_data *head = ((void*)0), **pp = &head;

 while (a || b) {
  struct line_log_data *src;
  struct line_log_data *src2 = ((void*)0);
  struct line_log_data *d;
  int cmp;
  if (!a)
   cmp = 1;
  else if (!b)
   cmp = -1;
  else
   cmp = strcmp(a->path, b->path);
  if (cmp < 0) {
   src = a;
   a = a->next;
  } else if (cmp == 0) {
   src = a;
   a = a->next;
   src2 = b;
   b = b->next;
  } else {
   src = b;
   b = b->next;
  }
  d = xmalloc(sizeof(struct line_log_data));
  line_log_data_init(d);
  d->path = xstrdup(src->path);
  *pp = d;
  pp = &d->next;
  if (src2)
   range_set_union(&d->ranges, &src->ranges, &src2->ranges);
  else
   range_set_copy(&d->ranges, &src->ranges);
 }

 return head;
}
